# Modulo8

./: .gitignore  README.md
codes/: nav2_go_to_pose.py  nav_waypoints.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pond2/lib/pond2/: savemap
install/pond2/share/pond2/: package.sh  package.xml  package.zsh
install/pond3/lib/pond3/: chatbot
install/pond3/share/pond3/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tartabot/lib/tartabot/: tartabot
install/tartabot/share/tartabot/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
pond2/install/: local_setup.sh  setup.sh
pond2/launch/: launch.py
pond2/log/: latest_build
pond2/src/tartabot/: package.xml  setup.cfg  setup.py
prova1/: chatprova.py
prova2/: README.md  requirements.txt  tts.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/pond2/: README.md  setup.cfg  setup.py
src/pond2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pond2/launch/: mapping_launch.py  tarta_launch.py
src/pond2/log/: latest_build
src/pond2/maps/: my-map.pgm  my-map.yaml
src/pond2/pond2/: tartabot.py  teleop.py
src/pond3/: README.md  setup.py
src/pond4/: README.md  package.xml  setup.cfg  setup.py
src/pond4/pond4/: llama.py  modelfile  superbot.py
src/pond5/: README.md  package.xml  setup.cfg  setup.py
src/pond6/: README.md  logictron.py
src/pond7/: README.md  epic_reader.py
src/pond8/: README.md
src/pond8/src/: epic_translator.py  stt.py  supertranslator.py  tts.py
(+19 files in other folders)
